--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
-PORT=5000
-DB_NAME=store_rating
+PORT=8000
+DB_NAME=store_rating_app_db
 DB_USER=postgres
 DB_PASS=7893
 DB_HOST=localhost
 DB_DIALECT=postgres
 JWT_SECRET=kotavenkateshstoreproject@12345
 JWT_EXPIRES_IN=1d
-DATABASE_URL=postgresql://postgres:7893@127.0.0.1:5432/store_rating_app_db
+DATABASE_URL=postgresql://postgres:7893@localhost:5432/store_rating_app_db
